--- a/client/src/components/usernameHoverCard/usernameHoverCard.css
+++ b/client/src/components/usernameHoverCard/usernameHoverCard.css
@@ -1,5 +1,7 @@
 .username-hover-container {
     position: relative;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .username-hover-card {
